flicker issue resolved

--- a/src/styles/certificate.css
+++ b/src/styles/certificate.css
@@ -17,6 +17,8 @@
     width: 100%;
     height: 100%;
     border-radius: 20px;
+    background: url(../assets/Certificate_1.png);
+    background-size: 100%;
 }
 
 /*
